feat: support reject applications flows with email notification