@@ -1,8 +1,11 @@
 package iuh.fit.goat.service.impl;
 
 import iuh.fit.goat.component.redis.application.ApplicationEventProducer;
+import iuh.fit.goat.dto.request.application.ApplicationIdsRequest;
 import iuh.fit.goat.dto.request.application.CreateApplicationRequest;
+import iuh.fit.goat.dto.response.application.ApplicationStatusResponse;
 import iuh.fit.goat.dto.result.application.ApplicationCreatedEvent;
+import iuh.fit.goat.dto.result.application.ApplicationStatusEvent;
 import iuh.fit.goat.enumeration.Status;
 import iuh.fit.goat.dto.response.application.ApplicationResponse;
 import iuh.fit.goat.service.ApplicationService;
@@ -14,6 +17,7 @@ import iuh.fit.goat.repository.*;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -66,47 +70,55 @@ public class ApplicationServiceImp implements ApplicationService {
         return this.applicationRepository.saveAll(pendingApplications);
     }
 
-//    @Override
-//    @Transactional
-//    public List<ApplicationStatusResponse> handleRejectApplications(ApplicationIdsRequest request) {
-//        List<Application> applications = this.applicationRepository.findAllById(request.getApplicationIds());
-//        if (applications.isEmpty()) return Collections.emptyList();
-//
-//        List<Application> pendingApplications = applications.stream()
-//                .filter(app -> app.getStatus().getValue().equalsIgnoreCase(Status.PENDING.getValue()))
-//                .toList();
-//
-//        pendingApplications.forEach(app -> app.setStatus(Status.REJECTED));
-//        this.applicationRepository.saveAll(pendingApplications);
-//
-//        Map<String, List<Application>> applicationsByEmail =
-//                pendingApplications.stream().collect(Collectors.groupingBy(Application::getEmail));
-//
-//        applicationsByEmail.forEach((email, apps) -> {
-//            if(apps.isEmpty()) return;
-//
-//            String username = apps.getFirst().getApplicant().getUsername();
-//
-//            this.emailNotificationService.handleSendApplicationStatusEmail(
-//                    email, username, apps, Status.REJECTED.getValue(),
-//                    null, null, null, null,
-//                    request.getReason()
-//            );
-//        });
-//
-//        return pendingApplications.stream()
-//                .map(app -> new ApplicationStatusResponse(
-//                        app.getApplicationId(),
-//                        app.getStatus().getValue()
-//                ))
-//                .collect(Collectors.toList());
-//    }
-//
+    @Override
+    @Transactional
+    public List<ApplicationStatusResponse> handleRejectApplications(ApplicationIdsRequest request) {
+        List<Application> applications = this.applicationRepository.findAllById(request.getApplicationIds());
+        if (applications.isEmpty()) return Collections.emptyList();
+
+        List<Application> pendingApplications = applications.stream()
+                .filter(app -> app.getStatus().getValue().equalsIgnoreCase(Status.PENDING.getValue()))
+                .toList();
+
+        pendingApplications.forEach(app -> app.setStatus(Status.REJECTED));
+        this.applicationRepository.saveAll(pendingApplications);
+
+        Map<String, List<Application>> applicationsByEmail =
+                pendingApplications.stream().collect(Collectors.groupingBy(Application::getEmail));
+
+        applicationsByEmail.forEach((email, apps) -> {
+            if(apps.isEmpty()) return;
+
+            String username = apps.getFirst().getApplicant().getUsername();
+            List<ApplicationStatusEvent> applicationEvents = apps.stream()
+                    .map(app -> new ApplicationStatusEvent(
+                            app.getJob().getTitle(),
+                            app.getJob().getCompany().getName()
+                    ))
+                    .toList();
+
+            this.eventProducer.publishApplicationStatus(
+                    email,
+                    username,
+                    applicationEvents,
+                    request.getReason(),
+                    Status.REJECTED.getValue()
+            );
+        });
+
+        return pendingApplications.stream()
+                .map(app -> new ApplicationStatusResponse(
+                        app.getApplicationId(),
+                        app.getStatus().getValue()
+                ))
+                .collect(Collectors.toList());
+    }
+
 //    @Override
 //    public void handleDeleteApplication(long id) {
 //        this.applicationRepository.deleteById(id);
 //    }
-//
+
 //    @Override
 //    public Application handleGetApplicationById(long id) {
 //        Optional<Application> application = this.applicationRepository.findById(id);
